# numhask-free

./: .gitignore  ChangeLog.md  numhask-free.cabal  readme.md
.github/workflows/: haskell-ci.yml
src/NumHask/: Diff.hs  Free.hs
src/NumHask/Free/: Additive.hs  Carriers.hs  Divisive.hs  Matrix.hs  Multiplicative.hs  Polynomial.hs  Ring.hs  StarSemiring.hs  Subtractive.hs
test/: Main.hs
