cabal-version: 3.0
name: numhask-free
version: 0.2.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2025
category: math
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/numhask-free#readme
bug-reports: https://github.com/tonyday567/numhask-free/issues
synopsis: Free term algebras for NumHask's numeric hierarchy.
description:
  numhask-free provides free term algebras for the algebraic structures
  found in numhask — syntax versus semantics, constructors versus
  observation. Terms up to Ring; beyond that, the theory is not a
  variety and the naive recursion stops.

build-type: Simple
tested-with:
  ghc ==9.12.2
  ghc ==9.14.1

extra-doc-files:
  ChangeLog.md
  readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/numhask-free

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

library
  import: ghc-options-stanza
  default-language: GHC2024
  hs-source-dirs: src
  build-depends:
    base >=4.18 && <5,
    containers,
    numhask,
  exposed-modules:
    NumHask.Diff
    NumHask.Free
    NumHask.Free.Additive
    NumHask.Free.Carriers
    NumHask.Free.Divisive
    NumHask.Free.Multiplicative
    NumHask.Free.Polynomial
    NumHask.Free.Ring
    NumHask.Free.StarSemiring
    NumHask.Free.Subtractive

test-suite tests
  import: ghc-options-stanza
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-language: GHC2024
  build-depends:
    base >=4.18 && <5,
    numhask-free,
